task-16-devsecops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-api
  labels:
    app: devsecops-api
spec:
  type: ClusterIP
  selector:
    app: devsecops-api
  ports:
    - name: http
      port: 80
      targetPort: http
